export error message as openapi component
